2009-02-09  Jonathan Pryor  <jpryor@novell.com>

	* UnixGroupInfo.cs (GetMembers): Skip group members which aren't valid
	  users on the system (thus removing a possible exception).  Patch
	  thanks to Daniel Peñalba.

2009-01-08  Rodrigo Kumpera  <rkumpera@novell.com>

	* UnixSignal.cs: Check if realtime signal install failed with 
	EADDRINUSE due to the signal been used by outside of Mono.Posix.

2008-12-19  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Allow RealTimeSignums to be used in addition to
	  Signum, so that real time signals can be used.  Patch thanks to 
	  tim.jenks@realtimeworlds.com.

2008-11-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* UnixStream.cs: Do not check offset against int.MaxValue 
	(System.IO doesn't have it). Reviewed by Jonathan Pryor.
	Bug reported by Siro Blanco <siro.blanco@gmail.com>.

2008-11-03  Miguel de Icaza  <miguel@novell.com>

	* UnixClient.cs (Client): Make this property public when using the
	Mono 2.0 profile, based on a discussion with Vlad Hociota and Joe
	Shaw. 

2008-02-11  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Improve argument checking to match docs.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: UnixSignal.WaitAny() should have the same return type as
	  WaitHandle.WaitAny().  Oops.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Modification of Info->count should be thread safe.

2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Added; Polling and blocking based Unix signal mechanism.
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026501.html

2008-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* UnixPipes.cs: Fix Equals to avoid NRE (and return false if object 
	is null). Found using Gendarme.

2007-12-17  Jonathan Pryor  <jpryor@novell.com>

	* UnixEnvironment.cs: Update MachineName property accesor to use uname(2)
	  instead of gethostname(2), as gethostname(2) truncates the machine name to