@@ -1,3 +1,8 @@
+2009-02-20  Jonathan Pryor  <jpryor@novell.com>
+
+	* UnixSignal.cs: Add a pipecnt member to UnixSignal.SignalIinfo.
+	  Patch thanks to tim.jenks@realtimeworlds.com.
+
 2009-02-09  Jonathan Pryor  <jpryor@novell.com>
 
 	* UnixGroupInfo.cs (GetMembers): Skip group members which aren't valid
